[add] fixed wrap Menu-Voci & width of finale row

--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,7 @@ h4{
 
 footer{
    background-color: rgb(35, 39, 42);
+   height: 100%;
 }
 
 /* INIZIO Sezione Menu Voci */
@@ -340,7 +341,11 @@ footer{
  ul{
    justify-content: space-between;
  }
- 
+
+ .contenitore-menu{
+   flex-wrap: wrap;
+ }
+
  li{
    list-style: none;
  }
@@ -414,7 +419,7 @@ h5{
  
 .row{
    border: 1px solid rgb(113, 132, 194);
-   margin: 0 160px;
+   margin: 0 360px;
 }
 
 .logo-finale{
